# scibudy

./: Makefile  README.md  mkdocs.yml  package.json  pyproject.toml  release-manifest.json
.github/workflows/: ci.yml  docs-pages.yml  docs.yml  package-npm.yml  package-python.yml  publish-npm.yml  publish-python.yml  release-assets.yml  release-check.yml  release-drafter.yml  site-health.yml
docs/: index.md
docs/en/: codex-setup.md  configuration.md  examples.md  index.md  installation.md  prerequisites.md
docs/zh/: codex-setup.md  configuration.md  examples.md  index.md  installation.md  prerequisites.md
research_mcp/: __init__.py  analysis_engine.py  cli.py  codex_config.py  domain_profiles.py  formatters.py  library.py  models.py  query_expansion.py  ranking.py  release-manifest.json  runtime_install.py  server.py  service.py  settings.py  utils.py
research_mcp/providers/: openalex.py  semanticscholar.py
scripts/: check_agent_workflow.py  check_site.py
tests/: test_analysis_engine.py  test_codex_config.py  test_distribution.py  test_domain_profiles.py  test_health_check.py  test_library.py  test_ranking.py  test_service.py
web/: package-lock.json  package.json
web/src/: App.jsx  styles.css
