[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scibudy"
version = "0.2.1"
description = "Codex-native scientific research expansion assistant with scholarly search, library management, and local semantic analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "ONEMULE", email = "xinluo116@gmail.com" }
]
keywords = [
  "codex",
  "mcp",
  "research",
  "literature-search",
  "scientific-workflow",
  "semantic-retrieval"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
dependencies = [
  "mcp==1.27.0",
  "httpx==0.28.1",
  "pydantic>=2.13.0,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "python-dotenv>=1.2.2,<2.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "openai>=1.102.0,<3.0.0",
  "pypdf>=5.9.0,<7.0.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "build>=1.2.2"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.14"]
release = ["build>=1.2.2", "twine>=6.1.0"]

[project.scripts]
research-mcp = "research_mcp.cli:mcp_main"
research-cli = "research_mcp.cli:cli_main"
scibudy-mcp = "research_mcp.cli:mcp_main"
scibudy = "research_mcp.cli:cli_main"

[tool.setuptools.packages.find]
include = ["research_mcp*"]

[tool.setuptools.package-data]
research_mcp = ["release-manifest.json"]

[project.urls]
Homepage = "https://github.com/ONEMULE/scibudy"
Repository = "https://github.com/ONEMULE/scibudy"
Issues = "https://github.com/ONEMULE/scibudy/issues"
Documentation = "https://github.com/ONEMULE/scibudy/tree/main/docs"
Changelog = "https://github.com/ONEMULE/scibudy/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
